<resources>
    <string name="app_name">Material Design Example</string>
    <string name="list_content_1">Lorem ipsum dolor sit amet</string>
    <string name="list_content_2">consectetur adipiscing elit</string>
    <string name="list_content_3">Ut enim ad minim veniam</string>
    <string name="list_content_4">Duis aute irure dolor in reprehenderit</string>
    <string name="list_content_5">sunt in culpa qui officia deserunt</string>

    <string name="add_to_list_button">Agregar elemento</string>
    <string name="infinite_list_entry_message">Mensaje %1$d</string>

    <string name="second_activity_launcher_button">Lista infinita</string>

    <string name="menu_about">Acerca de</string>
    <string name="menu_settings" >Settings</string>
    <string name="menu_close_app">Cerrar</string>

    <string name="about">Ejemplo de Material Design y Vistas en Android.</string>
    <string name="ok">Ok.</string>

    <string name="shared_button_transitionName" translatable="false">botonCompartido</string>

    <string name="color_detail_description">Descripción del color.</string>

    <string name="red_color_component">Rojo: %1$f f - %2$d</string>
    <string name="green_color_component">Verde: %1$f f - %2$d</string>
    <string name="blue_color_component">Azul: %1$f f - %2$d</string>
    <string name="hex_color_component">Hex: %1$f f - %2$d</string>

    <string name="light_theme_preference_id" translatable="false">0</string>
    <string name="dark_theme_preference_id" translatable="false">1</string>


    <string name="theme_preference_key" translatable="false">2</string>
    <string name="enable_transitions_preference_key" translatable="false">3</string>


    <string name="preferences_general_section_title">General</string>
    <string name="theme_preference_option_title">Change theme</string>
    <string name="theme_preference_selector_title">Choose a theme</string>
    <string name="theme_preference_option_summary">Changes the app\'s theme</string>
    <string name="transitions_preference_option_title">Animated transition?</string>
    <string name="transitions_preference_option_summary">Unchecking this may improve performance</string>


</resources>