<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/preferences_general_section_title">

        <androidx.preference.ListPreference
            android:key="@string/theme_preference_key"
            android:title="@string/theme_preference_option_title"
            android:dialogTitle="@string/theme_preference_selector_title"
            android:entries="@array/theme_preference_options"
            android:entryValues="@array/theme_preference_ids"
            android:summary="@string/theme_preference_option_summary"
            android:icon="@android:drawable/ic_menu_more"
            android:dialogIcon="@android:drawable/ic_menu_more"
            android:defaultValue="0"/>

        <androidx.preference.CheckBoxPreference
            android:key="@string/enable_transitions_preference_key"
            android:title="@string/transitions_preference_option_title"
            android:summary="@string/transitions_preference_option_summary"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:defaultValue="true"/>

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>